File Name: CHANGES

12/31/2014 FASP 1.6.4:
- Fix GCR file name conflicition, spgcr.c -> pgcr.c.
- Update VS2010 solution, changing from CPP to C, use C99 option.

12/30/2014 FASP 1.6.3:
- Add new pairwise aggregation code.
- Add new GCR iterative solver.
- Update nonlinear AMLI cycle.
- Find a bug in DIAG_PREF option.
- Stop using old Schwarz smoother.
- Format C code a little.
- Update regression test and its results.
- Update log.

12/26/2014 FASP 1.6.2:
- Modify CMAKE compiler preference: use CC environment first.
- Add aggressive coarsening based on MIS.
- Add GCR for CSR sparse matrices.
- Fix additive Schwarz preconditioner.
- Fix a bug found in regression tests.
- Update VS10 solution.
- Update log.

10/12/2014 FASP 1.6.1:
- Fix MUMPS link problem due to system directory and pthread in Ubuntu.
- Add Schwarz smoothers: C version.
- Add input parameter for Schwarz block solver type.
- Add a new shell for compare regression results.
- Add CMK and Reversed CMK ordering. 
- Remove unused variables in Schwarz method.
- Fix possible problems (uninitialized and unused variables).
- Fix wrong data type in MUMPS interface. 
- Fix VS10 problems for the new version.
- Update webpage and documentation.

10/06/2014 FASP 1.6.0:
- Update website and documentation.
- Fix a bug with MUMPS in VS2010 setting. 
- Modify debug information in MUMPS interface.
- Test FASP in the new Pangolin and fix several minor bugs.
- Fix VS2010 DEBUG mode bug.
- Fix a problem in test/main/test_bsr.c.
- Test regression_mm.c and record output in mm.out.
- Test regression_mf.c and record output in mf.out.
- Add a safty step for coarse correction scaling.
- Update FASP tutorial, make Fortran version gives same results as C version.
- Update Doxygen, webpage and TCL.
- Fix MUMPS dependence check for cmake.

09/24/2014 FASP 1.5.9:
- Update PGMRES code. 
- Add new regression tests and update regression results. 
- Add upper limit for GMRES restarting number.